Update Inventory page and fix appbar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,16 +76,16 @@ flutter:
   fonts:
     - family: Exo
       fonts:
-        - asset: fonts/Exo-VariableFont_wght.ttf
-        - asset: fonts/Exo-Italic-VariableFont_wght.ttf
-          style: italic
+        - asset: asset/font/Exo-VariableFont_wght.ttf
+        # - asset: fonts/Exo-Italic-VariableFont_wght.ttf
+        #   style: italic
 
     - family: Poppins 
       fonts:
-        - asset: fonts/Poppins-Regular.ttf
-        - asset: fonts/Poppins-Bold.ttf
+        - asset: asset/font/Poppins-Regular.ttf
+        - asset: asset/font/Poppins-Bold.ttf
           weight: 700
-        - asset: fonts/Poppins-Italic.ttf
+        - asset: asset/font/Poppins-Italic.ttf
           style: italic
   #
   # For details regarding fonts from package dependencies,
